src/objects/Lookup_PropertyState_State__mdt.object
<CustomObject>
    <fields>
        <fullName>Community__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dower__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dower</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Homestead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homestead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Lookup for mapping a state to its PropertyState values.</description>
    <label>Lookup PropertyState State</label>
    <pluralLabel>Lookup PropertyState States</pluralLabel>
    <listViews>
        <fullName>Details</fullName>
        <columns>State__c</columns>
        <columns>Community__c</columns>
        <columns>Dower__c</columns>
        <columns>Homestead__c</columns>
        <filterScope>Everything</filterScope>
        <label>Details</label>
    </listViews>
</CustomObject>